SF Primes/src/objects/President_s_Club_Performance__c.object
<CustomObject>
    <description>Monthly QC plan values for a specific rep/employee</description>
    <fields>
        <fullName>Actual_NNC__c</fullName>
        <description>Actual Net New Credit</description>
        <label>Actual NNC</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Actual_QC_Month__c</fullName>
        <inlineHelpText>Monthly Actual QC</inlineHelpText>
        <label>Actual QC</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Actual_RC__c</fullName>
        <description>Actual Retention Credit</description>
        <label>Actual RC</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Employee_Name__c</fullName>
        <label>Employee Name</label>
        <referenceTo>Employee_Information__c</referenceTo>
        <relationshipLabel>President&apos;s Club Performance</relationshipLabel>
        <relationshipName>R00N40000001lh8NEAQ</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Fiscal_Year__c</fullName>
        <label>Fiscal Year</label>
        <picklist>
            <picklistValues>
                <fullName>2003</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2004</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2005</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2006</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2007</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2008</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2009</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2010</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2011</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2016</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Forecasting_Channel__c</fullName>
        <inlineHelpText>Channel a person&apos;s forecast numbers roll-up to at Kevin Hendrick&apos;s Forecast view</inlineHelpText>
        <label>Forecasting Channel</label>
        <picklist>
            <picklistValues>
                <fullName>ARG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CDP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CVR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealix</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Digital Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DMI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DOX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enterprise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hoffman Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inside Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lightspeed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Major Markets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Network Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North Central</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Northeast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Performance Inc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PFW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RSP Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South Central</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Southeast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Southwest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Truck</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>West</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MonthNumber__c</fullName>
        <inlineHelpText>July = 1, Aug = 2, Sept = 3,...June = 12 
(Develop a trigger to auto set in the future)</inlineHelpText>
        <label>Month Number</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <label>Month</label>
        <picklist>
            <picklistValues>
                <fullName>January</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>February</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>March</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>April</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>May</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>June</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>July</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>August</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>September</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>October</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>November</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>December</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Planned_NNC__c</fullName>
        <description>Planned Net New Credit</description>
        <label>Planned NNC</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Planned_QC_Month__c</fullName>
        <inlineHelpText>Monthly Planned QC</inlineHelpText>
        <label>Planned QC</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Planned_RC__c</fullName>
        <description>Planned Retention Credit</description>
        <label>Planned RC</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Promo_QC__c</fullName>
        <inlineHelpText>Monthly Promo QC (if any needs to be applied</inlineHelpText>
        <label>Promo QC</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SPX_Rep_Pef_CreateDate__c</fullName>
        <label>SPX Rep Pef CreateDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SPX_Rep_Pef_ID__c</fullName>
        <label>SPX Rep Pef ID</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Title__c</fullName>
        <formula>Employee_Name__r.User__r.Title</formula>
        <label>User Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>of_Unhooks__c</fullName>
        <label># of Unhooks</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>President&apos;s Club Performance</label>
    <listViews>
        <fullName>Jan_2012</fullName>
        <columns>NAME</columns>
        <columns>Employee_Name__c</columns>
        <columns>Month__c</columns>
        <columns>Fiscal_Year__c</columns>
        <columns>User_Title__c</columns>
        <columns>Actual_QC_Month__c</columns>
        <columns>Planned_QC_Month__c</columns>
        <columns>Forecasting_Channel__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Fiscal_Year__c</field>
            <operation>equals</operation>
            <value>2012</value>
        </filters>
        <filters>
            <field>Month__c</field>
            <operation>equals</operation>
            <value>January</value>
        </filters>
        <label>Jan 2012</label>
        <sharedTo>
            <role>DataLibrarian</role>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>ID {00000}</displayFormat>
        <label>Pres Club Perform</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>President&apos;s Club Performance</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>